.remediation/snapshots/F08-ccnps.yaml
apiVersion: v1
items:
- apiVersion: cilium.io/v2
  kind: CiliumClusterwideNetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"cilium.io/v2","kind":"CiliumClusterwideNetworkPolicy","metadata":{"annotations":{},"name":"cilium-health-netpol"},"spec":{"egress":[{"toEntities":["remote-node"]},{"toEndpoints":[{"matchLabels":{"reserved:health":""}}]}],"endpointSelector":{"matchLabels":{"reserved:health":""}},"ingress":[{"fromEntities":["remote-node"]},{"fromEndpoints":[{"matchLabels":{"reserved:health":""}}]}]}}
    creationTimestamp: "2026-06-08T10:27:04Z"
    generation: 1
    name: cilium-health-netpol
    resourceVersion: "5148"
    uid: 16ee35ac-5e20-4fc3-a21a-51e29dfc2af2
  spec:
    egress:
    - toEntities:
      - remote-node
    - toEndpoints:
      - matchLabels:
          reserved:health: ""
    endpointSelector:
      matchLabels:
        reserved:health: ""
    ingress:
    - fromEntities:
      - remote-node
    - fromEndpoints:
      - matchLabels:
          reserved:health: ""
  status:
    conditions:
    - lastTransitionTime: "2026-06-08T10:27:04Z"
      message: Policy validation succeeded
      status: "True"
      type: Valid
kind: List
metadata:
  resourceVersion: ""
